Bug 128134 - UI: Chart Wizard for Pivot Table is broken
Summary: UI: Chart Wizard for Pivot Table is broken
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-10-14 07:32 UTC by Cor Nouws
Modified: 2019-10-16 10:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
simple pivot table (12.02 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-10-14 07:32 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2019-10-14 07:32:33 UTC
Created attachment 154987 [details]
simple pivot table

Put cursor in a Pivot Table
Choose Insert > Chart
  >> Next and Finish do not have any effect.


Noticed in  Version: 6.4.0.0.alpha0+
Build ID: d6ea967e040d01ec69649ac689472018e477db34
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time:
2019-10-12_14:50:24
Locale: nl-NL (nl_NL.UTF-8); UI-Language: en-US
Calc: threaded

Does work in Version: 6.4.0.0.alpha0+
Build ID: 6131288f2a85d43ba21210e677648c9245793e52
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: nl-NL (nl_NL.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-10-14 10:01:58 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d661cb17610af93b1607025284f23187c6d2fc06

author	Caolán McNamara <caolanm@redhat.com>	2019-08-22 11:15:57 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-08-22 18:26:41 +0200
commit d661cb17610af93b1607025284f23187c6d2fc06 (patch)
tree 855cf44dd6d3cb6232b0aaa2087da770350d202a
parent 38001018fa06f721cf87edae923b54ce9a5ab5a7 (diff)
weld chart CreationWizard

Bisected with: bibisect-linux64-6.4

Adding Cc: to Caolán McNamara
Comment 2 Commit Notification 2019-10-14 18:31:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5c921a617da29eeeedc6f78dd34263963efeeac0

Resolves: tdf#128134 page creation order affecting travel

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2019-10-16 10:09:44 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: e2d82611088677f8ec9f038639567f2d7c699b5e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!