Resolves: tdf#128134 page creation order affecting travel

the page is created before the page is moved to, so CanTravel gets
locked. Only lock when the page is the current page

Change-Id: Ic21fe3077a750e1279db8be0dd5c7f9112c999b1